fix: change overflow property from hidden to clip for scroll sections

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -984,7 +984,7 @@ html {
   right: 0;
   bottom: 0;
   opacity: 0;
-  overflow: hidden;
+  overflow: clip;
   height: max-content;
   transform: translateY(100px);
   pointer-events: none;
